src/objects/Jets__c.object
<CustomObject>
    <fields>
        <fullName>AirportCode__c</fullName>
        <description>The airport code where the plane is currently parked or travelling to</description>
        <label>Airport Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AirportLocation__c</fullName>
        <description>The airport name where the plane is currently parked or travelling to</description>
        <label>Airport Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Available</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Booked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Jets</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>AirportCode__c</columns>
        <columns>AirportLocation__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Jet Name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01Id0000000fUTlEAM_00Nd00000052N8FEAU</fullName>
        <active>true</active>
        <errorMessage>No Jets are available at this time</errorMessage>
        <field>Reservation__c.Jets__c</field>
        <filterItems>
            <field>Jets__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Reservation_Jets</name>
    </namedFilters>
    <pluralLabel>Jets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>